--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
 
 
-  <title>Muslim Mahin</title>
+  <title>Nazar Mykhasiv</title>
 </head>
 
 <body>
@@ -237,7 +237,7 @@
     <div class="intro_search">
       <div class="intro">
         <div class="name">
-          Muslim Mahin
+          Nazar Mykhasiv
         </div>
         <div class="toggle-btn" onclick="openMenu()">
           <span></span>
@@ -254,12 +254,12 @@
     </div>
 
     <div class="information">
-      <div class="photo">
+      <!-- <div class="photo">
         <embed type="image/svg+xml" src="assets/img/admin.svg">
-      </div>
+      </div> -->
       <div class="name">
         <div class="name">
-          Muslim Mahin
+          Nazar Mykhasiv
         </div>
         <div class="status">
           Administrator
@@ -511,7 +511,7 @@
 
       <div class="comments">
         <div class="title">
-          RECENT COMMENTS
+          BLOG
         </div>
         <div class="firt_comment">
           <div class="item">
@@ -528,7 +528,7 @@
               Approved
             </div>
             <div class="date">
-              August 14, 2016
+              December 21, 2020
             </div>
           </div>
         </div>
@@ -547,14 +547,14 @@
               Approved
             </div>
             <div class="date">
-              August 14, 2016
+              December 21, 2020
             </div>
           </div>
         </div>
       </div>
 
       <div class="end">
-        All Right Reserved 2016 © MuslimMahin
+        All Right Reserved 2016 © NazarMykhasiv
       </div>
 
     </div>
@@ -577,7 +577,7 @@
           </div>
           <div class="information">
             <div class="name">
-              John Partel
+              Sierra Simmons
             </div>
             <div class="status">
               2 hours ago
@@ -605,7 +605,7 @@
           </div>
           <div class="information">
             <div class="name">
-              John Partel
+              Miguel King
             </div>
             <div class="status">
               2 hours ago
@@ -619,7 +619,7 @@
           </div>
           <div class="information">
             <div class="name">
-              John Partel
+              Connor Russel
             </div>
             <div class="status">
               2 hours ago
@@ -644,7 +644,7 @@
             </div>
             <div class="information">
               <div class="name">
-                John Partel
+                Tommas Phillips
               </div>
               <div class="status">
                 Call Me Later..?
@@ -662,7 +662,7 @@
             </div>
             <div class="information">
               <div class="name">
-                John Partel
+                Seth Sanchuez
               </div>
               <div class="status">
                 Hello! bro...
@@ -680,7 +680,7 @@
             </div>
             <div class="information">
               <div class="name">
-                John Partel
+                Ariana Powell
               </div>
               <div class="status">
                 Can you help me?
@@ -698,7 +698,7 @@
             </div>
             <div class="information">
               <div class="name">
-                John Partel
+                Luck Smith
               </div>
               <div class="status">
                 What..?
@@ -716,7 +716,7 @@
             </div>
             <div class="information">
               <div class="name">
-                John Partel
+                Luck Smith
               </div>
               <div class="status">
                 Pari na tao kori..?
